# MYGIT

./: activity_recognizer.py  activity_recognizer_demo2.py  all_delay_reports.csv  delay.csv  extract_accel_from_feed_data_log.py  hr_data_view_libai_timefreq_2.py  libai.csv  match_libai_garmin_polar.py  merge_ppg_into_accel.py  part_one.csv  part_three.csv  part_two.csv  plot.py  summayrs.csv  未命名.ipynb  未命名1.ipynb
.ipynb_checkpoints/: 未命名-checkpoint.ipynb
CNN/: BN为什么管用.md  DenseNet.md  GMH损失函数_样本权重.md  RNN LSTM 和 GRU.md  ResNet.md  详解深度学习中的梯度消失、爆炸原因及其解决方法.md
CPP/: static作用.md  内存分配.md
CPP/CPP Primer Plus 第六版/: 第 13 章 类继承.md
FFT/: copy_good.py  get_delay_and_error_reports.py  gui_sample.py  plot_timefreq_of_ppg_and_acc.py  polar_delays.csv  ppg_timefreq_polar_lifeq_garmin_heartrates.py  scipy_fft.py  signal_welch.py  temp.py  utils.py  wavelet.py
GIT/: branch.md  branch_2.md
LINUX/: CMakeLists.txt  CMakeLists_txt学习.md  temp.md  unzipInplace.sh  zsh 安装与插件配置.md  同步.sh  文件重命名工具"rename".md  环境变量.md  软硬链接.md
LINUX/compile_demo/: build_demo.md
LINUX/compile_demo/math/: math.out
LINUX/compile_demo/math/include/: test.h
LINUX/compile_demo/math/src/: main.c
LINUX/compile_demo/test/: add.c  div.c  sub.c
LINUX/scripts/: build_android_armeabi-v7a.sh  build_hexagon.sh  build_x86_32.sh  build_x86_64.sh
LINUX/效率提升/: dpkg：处理软件包xxx(--configure)时出错 解决办法.md  命令行历史.md  小问题快速解决方案.md  运动识别发版流程.md
NUMPY/: numpy 的复制问题.md  pandas 的复制问题.md
ROTEPLAN/: brier.md
STASH/: activity_data_preprocess_nmea.py  clip_nmea_with_accel_file.py  indoor_outdoor_nmea_preprocess.py  indoor_outdoor_nmea_preprocess_standard.py  indoor_outdoor_recognizer_demo2.py  indoor_outdoor_recognizer_post.py  label_nmea_file_with_activity_label_result.py  nmea_problems_distribution.py  remove_unvalid_nmea_file.py  set_indoor_outdoor_status_outdoor.py  summary_labeled_nmea_files.py  从傅立叶变换到小波变换.md
STASH/py/: activity_recognizer_c.py  activity_recognizer_demo.py  activity_research.py  har_model_c.py  indoor_outdoor_recognizer.py  indoor_outdoor_recognizer_c.py  indoor_outdoor_recognizer_demo.py  indoor_outdoor_recognizer_post.py  indoor_outdoor_recognizer_process.py
STASH/tools/: label_nmea_file_with_activity_label_result.py  remove_unvalid_nmea_file.py
STASH/tools/py/: activity_data_labeler.py  activity_data_preprocess_nmea.py  activity_recognizer.py
STASH/tools/py/tools/: clip_nmea_file_with_accel_file.py  clip_nmea_with_accel_file.py
STASH/tools/py/utils/: common.py  split_test.py
activity_recognize/: A.py  a.py  b.py  c.py  d.py
algorithm/: feature select.md
click/: click.py
click_usage/: click_useage.py
codingdict/: 3D_surface.py  date.py  matplotlib_pyplot.py  tickLabels2values.py
datetime/: Matplot.py  addweek.py  dateTime.py  matplot_datetime.py  temp.py  to_datetime.py
matplotlib/: plot_with_datetime.py  span_selector.py  span_where.py  日期格式.py
metrics/: sklearn_metrics.py
open_and_pathlib/: open_pathlib_operation.md
pandas/: 文件复制.md  重命名.md
python/: 继承顺序MRO.md
python配置/: 设置PYTHON默认版本.md
setting/: indoor  indoor.c  indoor.py  indoor_outdoor_recognizer.py  json.c
src/py/log/: garmin_fit_collected.csv  garmin_fit_inserted.csv  libai_accel_collected.csv  match_summarys.csv  polar_csv_collected.csv  polar_csv_inserted.csv
xiaomi/: FDS数据同步.sh  activity_recognizer_.py  activity_recognizer_demo.py  activity_recognizier_demo_.py  add_event_timestamp.py  analysis_mdsp.py  clean_libai_garmin_polar.py  parse_args.py  plot_mi_har.py  plot_timefreq_of_ppg_and_acc.py  refactor.py  编译相关.md
xiaomi/auto_sync_polar/: auto_sync_polar.py  auto_sync_polars.py
xiaomi/heartrate/: align_polar_garmin_libai_heartrate.py  auto_sync_polar.py  auto_sync_polars.py  clean_libai_garmin_polar.py  polar_accounts.csv  refactor.py
xiaomi/libai_garmin_polar_preprocess/: clean_libai_garmin_polar.py  match_libai_garmin_polar.py  merge_ppg_into_accel.py
多进程/: usage.py
虚拟环境/: Python虚拟环境.md  ubantu安装python虚拟环境.md  virtualenv 或 virtualenvwrapper 创建虚拟环境.md
